--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background: #f0f4f8;
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   margin: 0;
+  margin-top: 10vh;
 }
 
 form {
